JumpScript/tests/baselines/reference/recursiveExportAssignmentAndFindAliasedType5.errors.txt
tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType5_moduleD.jump(1,1): error TS2303: Circular definition of import alias 'self'.


==== tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType5_moduleA.jump (0 errors) ====
    import moduleC = require("recursiveExportAssignmentAndFindAliasedType5_moduleC");
    import ClassB = require("recursiveExportAssignmentAndFindAliasedType5_moduleB");
    export var b: ClassB; // This should result in type ClassB
==== tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType5_moduleC.jump (0 errors) ====
    import self = require("recursiveExportAssignmentAndFindAliasedType5_moduleD");
    export = self;
    
==== tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType5_moduleD.jump (1 errors) ====
    import self = require("recursiveExportAssignmentAndFindAliasedType5_moduleC");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'self'.
    export = self;
    
==== tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType5_moduleB.jump (0 errors) ====
    class ClassB { }
    export = ClassB;
    